welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: not found: value T
		if (T(i)==T(i+1) & T(i)==T(i+2)){
                    ^